# skiptir

./: .gitignore  LICENSE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: python-app.yml
src/skiptir/: __init__.py  cli.py  const.py  main.py  skiptir.py
src/skiptir/Pyphen/pyphen/: __init__.py
src/skiptir/pyphen/: __init__.py
test/: input.txt  output.txt  test_hyphenation.py
